--- a/Resources/Private/Templates/Blog/Index.html
+++ b/Resources/Private/Templates/Blog/Index.html
@@ -1,11 +1,12 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<f:layout name="Default" />
-<f:section name="Main">
-<ul>
-    <f:for each="{resource.items}" as="item">
-        <li><f:link.action action="show" arguments="{item: item}">{item.title}</f:link.action></li>
-    </f:for>
-</ul>
-<f:debug>{_all}</f:debug>
-</f:section>
+    <f:layout name="Default" />
+    <f:section name="Main">
+        <ul>
+            <f:for each="{resource.items}" as="item">
+                <li><f:link.action action="show" arguments="{item: item}">{item.title}</f:link.action></li>
+            </f:for>
+        </ul>
+        <f:debug>{_all}</f:debug>
+        TODO
+    </f:section>
 </html>
